--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "name": "AlarmClock2",
+  "name": "AlarmClock",
   "version": "1.0.0",
+  "description": "This simple web application is written using vanilla Javascript (ES6). The application showcases a 12 HR format clock (in en-US). Users are able to set multiple alarms and are alerted when an alarm time is met.",
   "main": "index.js",
-  "scripts": {
-    "test": "npx karma start"
+  "directories": {
+    "test": "test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "browserslist": "^4.16.6",
+    "flat": "^5.0.2",
+    "he": "^1.2.0",
+    "is-docker": "^2.2.1",
+    "js-yaml": "^4.1.0",
+    "jsesc": "^2.5.2",
+    "json5": "^2.2.0",
+    "mime": "^2.5.2",
+    "nanoid": "^3.1.23",
+    "rimraf": "^3.0.2",
+    "semver": "^6.3.0",
+    "which": "^1.3.1"
+  },
   "devDependencies": {
     "chai": "~4.3.4",
     "karma": "~6.3.4",
@@ -18,14 +30,16 @@
     "karma-mocha": "~2.0.1",
     "mocha": "~9.0.2"
   },
-  "directories": {
-    "test": "test"
+  "scripts": {
+    "test": "npx karma start"
   },
-  "description": "This simple web application is written using vanilla Javascript (ES6). The application showcases a 12 HR format clock (in en-US). Users are able to set multiple alarms and are alerted when an alarm time is met.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/duyduongg/AlarmClock.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/duyduongg/AlarmClock/issues"
   },
