--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "karma-coverage": "~2.0.3",
     "karma-firefox-launcher": "~2.1.1",
     "karma-mocha": "~2.0.1",
-    "mocha": "~9.0.2"
+    "karma-sinon": "^1.0.5",
+    "karma-sinon-chai": "^2.0.2",
+    "mocha": "~9.0.2",
+    "sinon": "^11.1.1",
+    "sinon-chai": "^3.7.0"
   },
   "scripts": {
     "test": "npx karma start"
