--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "karma-mocha": "~2.0.1",
     "karma-sinon": "^1.0.5",
     "karma-sinon-chai": "^2.0.2",
+    "karma-spec-reporter": "^0.0.32",
     "mocha": "~9.0.2",
     "sinon": "^11.1.1",
     "sinon-chai": "^3.7.0"
